# multica-agent-codex

./: .editorconfig  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  api.ts  mockData.ts  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: acp.rs  app.rs  capabilities.rs  discovery.rs  lib.rs  orchestrator.rs  permissions.rs  process.rs  store.rs  types.rs
crates/core/tests/: acp_fake_agent.rs
crates/core/tests/fixtures/mcp/: fixture.json
crates/core/tests/fixtures/skills/review/: SKILL.md
scripts/: run-tauri-dev.mjs  vite-dev-server.mjs
services/relay/: Cargo.toml
services/relay/src/: main.rs
tools/fake-acp-agent/: index.mjs  package.json
